Fixed: scrollbar visibility

--- a/src/sass/grid-style.scss
+++ b/src/sass/grid-style.scss
@@ -25,6 +25,25 @@ body {
   // overflow: hidden;
 }
 
+body::-webkit-scrollbar {
+  width: 13px;
+}
+
+body {
+  scrollbar-width: thin;
+  scrollbar-color: var(--grey-color) var(--very-light-grey-color);
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--very-light-grey-color);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--grey-color);
+  border-radius: 6px;
+  border: 3px solid var(--very-light-grey-color);
+}
+
 * {
   margin: 0;
   padding: 0;
